Fixed broken link
no / in front of images or css folder

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 		<title>Arts 412 - Software II | Melissa Bernstein</title>
 		<meta name="format-detection" content="telephone=no">
 		<!-- Favicon -->
-		<link rel="icon" type="image/png" sizes="32x32" href="/images/icon32.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/icon32.png">
 		<!-- Apple/Safari icon -->
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/icon180.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png">
 		<!-- Square Windows tiles -->
-		<meta name="msapplication-square70x70logo" content="/images/icon70.png">
-		<meta name="msapplication-square150x150logo" content="/images/icon150.png">
-		<meta name="msapplication-square310x310logo" content="/images/icon310.png">
+		<meta name="msapplication-square70x70logo" content="images/icon70.png">
+		<meta name="msapplication-square150x150logo" content="images/icon150.png">
+		<meta name="msapplication-square310x310logo" content="images/icon310.png">
 		<!-- Rectangular Windows tile -->
-		<meta name="msapplication-wide310x150logo" content="/images/icon-rect-310.png">
+		<meta name="msapplication-wide310x150logo" content="images/icon-rect-310.png">
 		<!-- Windows tile theme color -->
 		<meta name="msapplication-TileColor" content="#2e2e2e">
 		<!-- load google font -->
@@ -22,7 +22,7 @@
 		<!--link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet"--> 
 		<link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet"> 
 
-		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
@@ -37,7 +37,7 @@
 				<div class="item">
 					<p class="date">December 03, 2018</p>
 					<h2>Project 3: Digital Storytelling</h2>
-					<p><img src=/images/Game_Start.png></p>
+					<p><img src=images/Game_Start.png></p>
 					<p>
 						The purpose of this project was to design, develop, and publish a digital narrative. For this assignment I worked with fellow designer Jonathan Flores to make a choose your own murder mystery adventure game. The original idea for the game was inspired by the movie Hush and the board game Clue. In the game you can follow the path of the female murder while trying to hunt down the victim in their own house or take your chances with running from a murder in the middle of the woods. The game is made up of twenty-two interconnected webpages coded by Jonathan Flores and illustrated by myself.
 						<br><br>
@@ -47,8 +47,8 @@
 				<div class="item">
 					<p class="date">August 21, 2018</p>
 					<h2>Project 2: Line Icon</h2>
-					<p><img src=/images/LineIcon_Melissa.png></p>
-					<p><img src=/images/Sunflower.gif></p>
+					<p><img src=images/LineIcon_Melissa.png></p>
+					<p><img src=images/Sunflower.gif></p>
 					<p>The goal for this project was to create an icon that is visibleat 4 different sizes, editing it as the icon is scaled down as needed, so that it is still readable. 
 					</p>
 				</div>
@@ -58,7 +58,7 @@
 				<div class="item">
 					<p class="date">August 21, 2018</p>
 					<h2>Project 1: Intention</h2>
-					<p><img src=/images/Melissa-Postcard.jpg></p>
+					<p><img src=images/Melissa-Postcard.jpg></p>
 					<p>For this project we had to create a postcard of our own design.  I chose to focus on Israel and what it means to me.
 					</p>
 				</div>
@@ -76,7 +76,7 @@
 					<!-- or a logo image: <img src="https://via.placeholder.com/300x100?text=My+Logo" title="my logo">  -->
 				</header>
 				<div class="bio">
-					<p><img src=/images/PersonalLogo.png></p>
+					<p><img src=images/PersonalLogo.png></p>
 					<p>Melissa J. Bernstein
 					<p>SUNY Binghamton University 2020
 					<p>BFA Graphic Design
